<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:gravity="center"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip"
		android:background="@drawable/gradient_box"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/login_title"
			android:textSize="40dip"
			android:gravity="center"
			android:paddingTop="20dip"
			android:paddingBottom="20dip" />
		<EditText
			android:text=""
			android:id="@+id/txtUserName"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login_userName_hint"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:singleLine="true" />
		<EditText
			android:text=""
			android:id="@+id/txtUserPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login_userPassword_hint"
			android:password="true"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="10dip"
			android:singleLine="true" />
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<CheckBox
				android:id="@+id/chkRemberPassword"
				android:text="@string/login_rememberPassword"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:gravity="left|center_vertical" />
			<CheckBox
				android:id="@+id/chkAutoLogin"
				android:text="@string/login_autoLogin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:gravity="right|center_vertical" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<Button
				android:layout_height="wrap_content"
				android:id="@+id/btnSubmit"
				android:layout_width="wrap_content"
				android:text="@string/btn_submit"
				android:minWidth="200dp"
				android:layout_margin="8dp"
				android:gravity="center" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
